--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Document</title>
-	<!-- <link rel="stylesheet" type="text/css" href="../../onescreen/OneScreen/Client/S/app/css/main.css"> -->
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="../../onescreen/OneScreen/Client/S/app/css/main.css">
+	<!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
 		 
 	<style type="text/css">
 		body {
@@ -256,7 +256,7 @@
 		<div class="grid-row--gutter-none">
 			<div class="col-hg-6 col-md-6 padding-whole--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-mobile-medium grid-row--gutter-none">
-					<div class="col-hg-5 col-xs-12 image-area col-xs--first col-hg--ordered">
+					<div class="col-hg-5 col-xs-12 image-area col-hg--middle">
 						<div class="terminal-block__image-holder">
 							<img src="mobile-test-img-2.png" alt="">
 							<div class="splash font-roboto splash--blue">
