--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="../../onescreen/OneScreen/Client/S/app/css/main.css">
-	<!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="../../onescreen/OneScreen/Client/S/app/css/main.css"> -->
+	<link rel="stylesheet" type="text/css" href="main.css">
 		 
 	<style type="text/css">
 		body {
@@ -259,7 +259,7 @@
 					<div class="col-hg-5 col-xs-12 image-area col-hg--middle">
 						<div class="terminal-block__image-holder">
 							<img src="mobile-test-img-2.png" alt="">
-							<div class="splash font-roboto splash--blue">
+							<div class="splash  splash--blue">
 								<span class="splash__heading">Text here</span>
 								<span class="splash__price">xxxXX <span class="price-currency">KR.</span></span>
 							</div>
@@ -281,7 +281,7 @@
 									
 								</ul>
 							</div>	
-							<span class="text-size--13 text-bold font-roboto tablet-l-hidden text-caps">6-col Mobile product block</span>
+							<span class="text-size--13 text-bold  tablet-l-hidden text-caps">6-col Mobile product block</span>
 							<h2 class="text-size--38 tablet-l-text-size--16 trailer--small tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
 							<ul class="list list--check list--check__circle list--blue tablet-l-hidden text-size--16">
 								<li>Free USP Episerver text here</li>
@@ -548,7 +548,7 @@
 									</li>
 								</ul>
 							</div>
-							<span class="text-size--13 text-bold font-roboto tablet-l-hidden text-caps">6-col Tablet product block</span>
+							<span class="text-size--13 text-bold  tablet-l-hidden text-caps">6-col Tablet product block</span>
 							<h2 class="text-size--38 tablet-l-text-size--16 trailer--small tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
 							<ul class="list list--check list--check__circle list--blue tablet-l-hidden text-size--16">
 								<li>Free USP Episerver text here</li>
@@ -659,7 +659,7 @@
 									</li>
 								</ul>
 							</div>	
-							<span class="text-size--13 text-bold font-roboto tablet-l-hidden text-caps">9-col mobile/tablet product block</span>
+							<span class="text-size--13 text-bold  tablet-l-hidden text-caps">9-col mobile/tablet product block</span>
 							<h2 class="text-size--38 tablet-l-text-size--16 trailer--small tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
 							<ul class="list list--check list--check__circle list--blue tablet-l-hidden text-size--16">
 								<li>Free USP Episerver text here</li>
@@ -703,7 +703,7 @@
 									</li>
 								</ul>
 							</div>	
-							<span class="text-size--13 text-bold font-roboto tablet-l-hidden text-caps">9-col mobile/tablet product block</span>
+							<span class="text-size--13 text-bold  tablet-l-hidden text-caps">9-col mobile/tablet product block</span>
 							<h2 class="text-size--38 tablet-l-text-size--16 trailer--small tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
 							<ul class="list list--check list--check__circle list--blue tablet-l-hidden text-size--16">
 								<li>Free USP Episerver text here</li>
@@ -821,7 +821,7 @@
 									</li>
 								</ul>
 							</div>
-							<span class="text-size--13 text-bold font-roboto tablet-l-hidden text-caps">9-col accessories product block test</span>
+							<span class="text-size--13 text-bold  tablet-l-hidden text-caps">9-col accessories product block test</span>
 							<h2 class="text-size--38 tablet-l-text-size--16 trailer--small tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
 							<ul class="list list--check list--check__circle list--blue tablet-l-hidden text-size--16">
 								<li>Free USP Episerver text here</li>
@@ -873,7 +873,7 @@
 									</li>
 								</ul>
 							</div>
-							<span class="text-size--13 text-bold font-roboto tablet-l-hidden text-caps">6-col Tablet product block</span>
+							<span class="text-size--13 text-bold  tablet-l-hidden text-caps">6-col Tablet product block</span>
 							<h2 class="text-size--38 tablet-l-text-size--16 trailer--small tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
 							<ul class="list list--check list--check__circle list--blue tablet-l-hidden text-size--16">
 								<li>Free USP Episerver text here</li>
@@ -979,7 +979,7 @@
 					<p class="teaser text-caps text-size--13 trailer--xsmall text-bold">Block with 3 USP’s</p>
 					<h2 class="text-light text-size--48 mobile-text-size--28 trailer--med mobile-trailer--small">Masser af nye features</h2>
 					<div class="usp-block__description">
-						<p class="font-roboto">Teaser text</p>
+						<p>Teaser text</p>
 					</div>
 				</div>
 				<div class="col-xs-12 grid-row--gutter-large grid-row-md--center trailer--section">
@@ -1016,7 +1016,7 @@
 					<p class="teaser text-caps text-size--13 trailer--xsmall text-bold">Block with 4 USP’s</p>
 					<h2 class="text-light text-size--48 mobile-text-size--28 trailer--med mobile-trailer--small">Masser af nye features</h2>
 					<div class="usp-block__description">
-						<p class="font-roboto">Teaser text</p>
+						<p>Teaser text</p>
 					</div>
 				</div>
 				<div class="col-xs-12 grid-row trailer--section">
@@ -1061,7 +1061,7 @@
 					<p class="teaser text-caps text-size--13 trailer--xsmall text-bold">Block with 6 USP’s</p>
 					<h2 class="text-light text-size--48 mobile-text-size--28 trailer--med mobile-trailer--small">Masser af nye features</h2>
 					<div class="usp-block__description">
-						<p class="font-roboto">Teaser text</p>
+						<p>Teaser text</p>
 					</div>
 				</div>
 				<div class="col-xs-12 grid-row trailer--section">
@@ -1133,7 +1133,7 @@
 					<p class="teaser text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">Block with 6 USP’s</p>
 					<h2 class="text-light text-size--44 mobile-text-size--28 trailer--med tablet-p-trailer mobile-trailer--small">Main title</h2>
 					<div class="usp-block__description trailer--xlarge tablet-p-trailer--section mobile-trailer--xlarge">
-						<p class="font-roboto">Teaser text</p>
+						<p>Teaser text</p>
 					</div>
 					<div class="box-holder grid-row--gutter-large grid-row-md--center grid-row-xs--center trailer--section-base tablet-p-trailer--section">
 						<div class="box col-lg-12 col-md-6">
@@ -1185,7 +1185,7 @@
 					<p class="teaser text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">Block with 6 USP’s</p>
 					<h2 class="text-light text-size--44 mobile-text-size--28 trailer--med tablet-p-trailer mobile-trailer--small">Main title</h2>
 					<div class="usp-block__description trailer--xlarge tablet-p-trailer--section mobile-trailer--xlarge">
-						<p class="font-roboto">Teaser text</p>
+						<p>Teaser text</p>
 					</div>
 					<div class="box-holder grid-row--gutter-large grid-row-md--center grid-row-xs--center trailer--section-base tablet-p-trailer--section">
 						<div class="box col-lg-12 col-md-6">
