--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="carousel__holder" data-element="carouselHolder">
 				
 				<div class="carousel__item 1" data-element="carouselSlide">
-					<div class="container container--blocks mobile-padding-toleft--small mobile-padding-toright--small">
+					<div class="container mobile-padding-toleft--small mobile-padding-toright--small">
 						<div class="grid-row--gutter-none cover-holder">
 							<div class="col-lg-5 text--center image-block">
 								<img src="carousel-beoplay-image.png" alt="">
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="carousel__item 2" data-element="carouselSlide">
-					<div class="container container--blocks mobile-padding-toleft--small mobile-padding-toright--small">
+					<div class="container mobile-padding-toleft--small mobile-padding-toright--small">
 						<div class="grid-row--gutter-none cover-holder">
 							<div class="col-lg-5 text--center image-block">
 								<img src="carousel-ipad-image.png" alt="">
@@ -77,7 +77,7 @@
 				</div>
 
 				<div class="carousel__item 3" data-element="carouselSlide">
-					<div class="container container--blocks mobile-padding-toleft--small mobile-padding-toright--small">
+					<div class="container mobile-padding-toleft--small mobile-padding-toright--small">
 						<div class="grid-row--gutter-none cover-holder">
 							<div class="col-lg-5 text--center image-block">
 								<img src="carousel-beoplay-image.png" alt="">
@@ -103,7 +103,7 @@
 				</div>
 
 				<div class="carousel__item 4" data-element="carouselSlide">
-					<div class="container container--blocks mobile-padding-toleft--small mobile-padding-toright--small">
+					<div class="container mobile-padding-toleft--small mobile-padding-toright--small">
 						<div class="grid-row--gutter-none cover-holder">
 							<div class="col-lg-5 text--center image-block">
 								<img src="carousel-ipad-image.png" alt="">
@@ -138,7 +138,7 @@
 	<h2 class="trailer text-size--38 tablet-l-text-size--34 text-light">Covers wide</h2>
 	
 	<div class="terminal-block terminal-block--cover container--wide trailer">
-		<div class="container container--blocks mobile-padding-toleft--small mobile-padding-toright--small">
+		<div class="container mobile-padding-toleft--small mobile-padding-toright--small">
 			<div class="grid-row--gutter-none">
 				<div class="col-lg-6 text--center image-block">
 					<img src="cover-img.png" alt="">
@@ -164,7 +164,7 @@
 		<div class="background desktop-visible" style="background-image: url(cover-full.jpg)"></div>
 		<div class="background tablet-p-visible tablet-l-visible" style="background-image: url(cover-full-tablet.jpg)"></div>
 		<div class="background mobile-visible" style="background-image: url(cover-full-mobile.jpg)"></div>
-		<div class="container container--blocks">
+		<div class="container">
 			<div class="cover-holder grid-row--gutter-none grid-row-xs--middle grid-row-xs--center padding-whole--large mobile-padding-toleft mobile-padding-toright">
 				<div class="col-hg-6 col-lg-8 col-md-10 banner-content">
 					<div class="splash splash--image desktop-visible">
@@ -198,7 +198,7 @@
 				<source type="video/mp4" src="https://player.vimeo.com/external/184862802.hd.mp4?s=2f40bc3e5491efdd0fd672ca0867ab206a3bdd0a&profile_id=174">
 			</video>
 		</div>
-		<div class="container container--blocks">
+		<div class="container">
 			<div class="cover-holder grid-row--gutter-none grid-row-xs--middle grid-row-xs--center padding-whole--large mobile-padding-toleft mobile-padding-toright">
 				<div class="col-hg-6 col-lg-8 col-md-10 banner-content">
 					<div class="splash splash--image">
@@ -222,7 +222,7 @@
 		<div class="background desktop-visible" style="background-image: url(cover-stretch.jpg)"></div>
 		<div class="background tablet-p-visible tablet-l-visible" style="background-image: url(cover-stretch.jpg)"></div>
 		<div class="background mobile-visible" style="background-image: url(cover-stretch.jpg)"></div>
-		<div class="container container--blocks">
+		<div class="container">
 			<div class="cover-holder grid-row--gutter-none grid-row-xs--middle grid-row-lg--left grid-row-md--center padding-whole--large mobile-padding-toleft mobile-padding-toright">
 				<div class="col-hg-6 col-lg-7 col-md-10 banner-content">
 					<div class="splash splash--image">
@@ -243,7 +243,7 @@
 	</div>
 	
 	<div class="container--wide terminal-block terminal-block--cover terminal-block--cover-full terminal-block--cover-stretch terminal-block--cover-mood trailer" style="background-image: url(cover-stretch.jpg)">
-		<div class="container container--blocks">
+		<div class="container">
 			<div class="cover-holder grid-row--gutter-none grid-row-xs--middle grid-row-xs--center padding-whole--large mobile-padding-toleft mobile-padding-toright">
 				<div class="col-hg-6 col-lg-8 col-md-10 banner-content">
 					<h2 class="text-size--64 tablet-l-text-size--58 mobile-text-size--34 text-light trailer mobile-trailer--small">Main title.</h2>
@@ -253,10 +253,10 @@
 		</div>
 	</div>
 	
-	<div class="container container--blocks padding-leader padding-trailer">
+	<div class="container padding-leader padding-trailer">
 		<h1 class="text-size--38 tablet-l-text-size--34 text-light">Our own favorits</h1>
 	</div>
-	<div class="container container--blocks">
+	<div class="container">
 		<div class="grid-row--gutter-none">
 			<div class="col-hg-6 col-md-6 padding-whole--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-mobile-medium grid-row--gutter-none">
@@ -973,10 +973,10 @@
 		</div>
 	</div>
 	
-	<div class="container container--blocks padding-leader padding-trailer">
+	<div class="container padding-leader padding-trailer">
 		<h1 class="text-size--38 tablet-l-text-size--34 text-light">Feature USP block</h1>
 	</div>
-	<div class="container container--blocks">
+	<div class="container">
 		<div class="usp-block text--center trailer padding-whole--section padding-trailer--large">
 			<div class="trailer--section mobile-trailer--xlarge">
 				<p class="text-caps text-size--13 trailer--xsmall text-bold">Block with 3 USP’s</p>
@@ -1120,10 +1120,10 @@
 			<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
 		</div>
 	</div>
-	<div class="container container--blocks padding-leader padding-trailer">
+	<div class="container padding-leader padding-trailer">
 		<h1 class="text-size--38 tablet-l-text-size--34 text-light">Feature USP block + image</h1>
 	</div>
-	<div class="container container--blocks">
+	<div class="container">
 		<div class="usp-block usp-block--image grid-row--gutter-none trailer padding-whole--section padding-trailer--large" style="background-image: url(image-usp.png)">
 			<div class="col-md-12 tablet-l-visible">
 				<img src="image-usp-mobile.png" alt="image descr." />
@@ -1229,11 +1229,11 @@
 		</div>
 	</div>
 	
-	<div class="container container--blocks padding-leader padding-trailer">
+	<div class="container padding-leader padding-trailer">
 		<h1 class="text-size--38 tablet-l-text-size--34 text-light">Content text block</h1>
 	</div>
 	
-	<div class="container container--blocks">
+	<div class="container">
 		<div class="terminal-text-block grid-row--gutter-none padding-whole--section padding-trailer--large mobile-padding-whole mobile-padding-leader--large mobile-padding-trailer--large trailer">
 			<div class="col-lg-8 col-hg-7 col-md-9">
 				<div class="icon-holder trailer">
@@ -1292,11 +1292,11 @@
 		</div>
 	</div>
 	
-	<div class="container container--blocks padding-leader padding-trailer">
+	<div class="container padding-leader padding-trailer">
 		<h1 class="text-size--38 tablet-l-text-size--34 text-light">Content text block 6/6</h1>
 	</div>
 	
-	<div class="container container--blocks">
+	<div class="container">
 		<!-- text left -->
 		<div class="grid-row--gutter-none terminal-text-block terminal-text-block--image trailer">
 			<div class="col-lg-6 image-holder">
@@ -1394,11 +1394,11 @@
 		</div>
 	</div>
 	
-	<div class="container container--blocks padding-leader padding-trailer">
+	<div class="container padding-leader padding-trailer">
 		<h1 class="text-size--38 tablet-l-text-size--34 text-light">Content text block 4/8</h1>
 	</div>
 	
-	<div class="container container--blocks">
+	<div class="container">
 		<!-- text 4 - image 8  text left -->
 		<div class="grid-row--gutter-none terminal-text-block terminal-text-block--image trailer">
 			<div class="col-lg-8 image-holder">
@@ -1488,11 +1488,11 @@
 		</div>
 	</div>
 	
-	<div class="container container--blocks padding-leader padding-trailer">
+	<div class="container padding-leader padding-trailer">
 		<h1 class="text-size--38 tablet-l-text-size--34 text-light">Dividers</h1>
 	</div>
 	
-	<div class="container container--blocks">
+	<div class="container">
 		<h2>1 px, only white background</h2>
 		<div class="divider-block grid-row--gutter-none grid-row-xs--center">
 			<div class="divider-block__separator col-xs-12"></div>
