--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 									</ul>
 								</div>	
 								<span class="text-size--13 text-bold  tablet-l-hidden text-caps">6-col Mobile product block</span>
-								<h2 class="text-size--38 tablet-l-text-size--16 trailer--small tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
+								<h2 class="text-size--38 tablet-l-text-size--16 trailer tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
 								<ul class="list list--check list--check__circle list--blue tablet-l-hidden text-size--16">
 									<li>Free USP Episerver text here</li>
 									<li>Free USP Episerver text here</li>
@@ -554,7 +554,7 @@
 									</ul>
 								</div>
 								<span class="text-size--13 text-bold  tablet-l-hidden text-caps">6-col Tablet product block</span>
-								<h2 class="text-size--38 tablet-l-text-size--16 trailer--small tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
+								<h2 class="text-size--38 tablet-l-text-size--16 trailer tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
 								<ul class="list list--check list--check__circle list--blue tablet-l-hidden text-size--16">
 									<li>Free USP Episerver text here</li>
 									<li>Free USP Episerver text here</li>
@@ -665,7 +665,7 @@
 									</ul>
 								</div>	
 								<span class="text-size--13 text-bold  tablet-l-hidden text-caps">9-col mobile/tablet product block</span>
-								<h2 class="text-size--38 tablet-l-text-size--16 trailer--small tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
+								<h2 class="text-size--38 tablet-l-text-size--16 trailer tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
 								<ul class="list list--check list--check__circle list--blue tablet-l-hidden text-size--16">
 									<li>Free USP Episerver text here</li>
 									<li>Free USP Episerver text here</li>
@@ -709,7 +709,7 @@
 									</ul>
 								</div>	
 								<span class="text-size--13 text-bold  tablet-l-hidden text-caps">9-col mobile/tablet product block</span>
-								<h2 class="text-size--38 tablet-l-text-size--16 trailer--small tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
+								<h2 class="text-size--38 tablet-l-text-size--16 trailer tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
 								<ul class="list list--check list--check__circle list--blue tablet-l-hidden text-size--16">
 									<li>Free USP Episerver text here</li>
 									<li>Free USP Episerver text here</li>
@@ -827,7 +827,7 @@
 									</ul>
 								</div>
 								<span class="text-size--13 text-bold  tablet-l-hidden text-caps">9-col accessories product block test</span>
-								<h2 class="text-size--38 tablet-l-text-size--16 trailer--small tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
+								<h2 class="text-size--38 tablet-l-text-size--16 trailer tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
 								<ul class="list list--check list--check__circle list--blue tablet-l-hidden text-size--16">
 									<li>Free USP Episerver text here</li>
 									<li>Free USP Episerver text here</li>
@@ -879,7 +879,7 @@
 									</ul>
 								</div>
 								<span class="text-size--13 text-bold  tablet-l-hidden text-caps">6-col Tablet product block</span>
-								<h2 class="text-size--38 tablet-l-text-size--16 trailer--small tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
+								<h2 class="text-size--38 tablet-l-text-size--16 trailer tablet-l-trailer--none text-light tablet-l-text-regular">Product title</h2>
 								<ul class="list list--check list--check__circle list--blue tablet-l-hidden text-size--16">
 									<li>Free USP Episerver text here</li>
 									<li>Free USP Episerver text here</li>
