--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
 				</div>
 				<div class="col-hg-6 col-md-6 flex padding-whole--xsmall mobile-padding-toleft--med mobile-padding-toright--med">
 					<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-tablet-medium grid-row--gutter-none">
-						<div class="col-hg-5 col-xs-auto text--center col-hg--middle">
+						<div class="col-hg-5 col-xs-auto col-hg--middle">
 							<div class="terminal-block__image-holder">
 								<img src="tablet-test-img.png" alt="">
 								<div class="splash splash--image">
