--- a/index.html
+++ b/index.html
@@ -331,10 +331,10 @@
 										
 									</ul>
 								</div>	
-								<h2 class="text-size--16 text-regular">3-col accessories block 3-col accessories block</h2>
+								<h2 class="text-size--16 text-regular">3-col accessories block</h2>
 							</div>
 							<div class="price-box">
-								<p class="text-size--19 trailer--xlarge">
+								<p class="text-size--19 trailer--large">
 									<span class="color-blue tablet-l-text-regular">XXX</span>
 									<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
 								</p>
@@ -372,7 +372,7 @@
 								<h2 class="text-size--16 text-regular">3-col mobile/tablet product block</h2>
 							</div>
 							<div class="price-box">
-								<p class="text-size--19 trailer--xlarge">
+								<p class="text-size--19 trailer--large">
 									<span class="color-blue tablet-l-text-regular">XXX</span>
 									<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
 								</p>
@@ -410,7 +410,7 @@
 								<h2 class="text-size--16 text-regular">3-col accessories block</h2>
 							</div>
 							<div class="price-box">
-								<p class="text-size--19 trailer--xlarge">
+								<p class="text-size--19 trailer--large">
 									<span class="color-blue tablet-l-text-regular">XXX</span>
 									<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
 								</p>
@@ -447,7 +447,7 @@
 								<h2 class="text-size--16 text-regular">3-col mobile/tablet product block</h2>
 							</div>
 							<div class="price-box">
-								<p class="text-size--19 trailer--xlarge">
+								<p class="text-size--19 trailer--large">
 									<span class="color-blue tablet-l-text-regular">XXX</span>
 									<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
 								</p>
@@ -600,7 +600,7 @@
 								<h2 class="text-size--16 text-regular">3-col accessories block</h2>
 							</div>
 							<div class="price-box">
-								<p class="text-size--19 trailer--xlarge">
+								<p class="text-size--19 trailer--large">
 									<span class="color-blue tablet-l-text-regular">XXX</span>
 									<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
 								</p>
@@ -637,7 +637,7 @@
 								<h2 class="text-size--16 text-regular">3-col mobile/tablet product block</h2>
 							</div>
 							<div class="price-box">
-								<p class="text-size--19 trailer--xlarge">
+								<p class="text-size--19 trailer--large">
 									<span class="color-blue tablet-l-text-regular">XXX</span>
 									<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
 								</p>
@@ -763,7 +763,7 @@
 								<h2 class="text-size--16 text-regular">3-col mobile/tablet product block</h2>
 							</div>
 							<div class="price-box">
-								<p class="text-size--19 trailer--xlarge">
+								<p class="text-size--19 trailer--large">
 									<span class="color-blue tablet-l-text-regular">XXX</span>
 									<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
 								</p>
@@ -800,7 +800,7 @@
 								<h2 class="text-size--16 text-regular">3-col mobile/tablet product block</h2>
 							</div>
 							<div class="price-box">
-								<p class="text-size--19 trailer--xlarge">
+								<p class="text-size--19 trailer--large">
 									<span class="color-blue tablet-l-text-regular">XXX</span>
 									<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
 								</p>
@@ -925,7 +925,7 @@
 								<h2 class="text-size--16 text-regular">3-col accessories block</h2>
 							</div>
 							<div class="price-box">
-								<p class="text-size--19 trailer--xlarge">
+								<p class="text-size--19 trailer--large">
 									<span class="color-blue tablet-l-text-regular">XXX</span>
 									<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
 								</p>
@@ -962,7 +962,7 @@
 								<h2 class="text-size--16 text-regular">3-col mobile/tablet product block</h2>
 							</div>
 							<div class="price-box">
-								<p class="text-size--19 trailer--xlarge">
+								<p class="text-size--19 trailer--large">
 									<span class="color-blue tablet-l-text-regular">XXX</span>
 									<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
 								</p>
