--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 					<p class="text-size--16 mobile-text-size--13 trailer--small tablet-p-trailer">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening. </p>
 					<button class="button button--action trailer--large">Button</button>
 				</div>
-				<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
+				<p class="text-size--11 color-steel-grey text-legal">Minimum price w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 			</div>
 		</div>
 	</div>
@@ -297,7 +297,7 @@
 							<p class="text-size--13 tablet-l-hidden">Only</p>
 							<p class="text-size--44 trailer--large tablet-l-trailer--xlarge tablet-l-text-size--19">
 								<span class="color-blue text-light tablet-l-text-regular">XXX</span>
-								<span class="text-size--19 tablet-l-text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--19 tablet-l-text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -335,7 +335,7 @@
 						<div class="price-box">
 							<p class="text-size--19 trailer--large">
 								<span class="color-blue tablet-l-text-regular">XXX</span>
-								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -373,7 +373,7 @@
 						<div class="price-box">
 							<p class="text-size--19 trailer--large">
 								<span class="color-blue tablet-l-text-regular">XXX</span>
-								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -411,7 +411,7 @@
 						<div class="price-box">
 							<p class="text-size--19 trailer--large">
 								<span class="color-blue tablet-l-text-regular">XXX</span>
-								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -448,7 +448,7 @@
 						<div class="price-box">
 							<p class="text-size--19 trailer--large">
 								<span class="color-blue tablet-l-text-regular">XXX</span>
-								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -537,7 +537,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-7 col-xs bundle-content tablet-l-text--center">
+					<div class="col-hg-7 col-xs bundle-content tablet-l-text--center padding-toleft--small mobile-padding-toleft--none">
 						<div class="terminal-block__description">
 							<div class="colors-holder desktop-hidden">
 								<ul class="colors-list">
@@ -564,7 +564,7 @@
 							<p class="text-size--13 tablet-l-hidden">Only</p>
 							<p class="text-size--44 trailer--large tablet-l-trailer--xlarge tablet-l-text-size--19">
 								<span class="color-blue text-light tablet-l-text-regular">XXX</span>
-								<span class="text-size--19 tablet-l-text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--19 tablet-l-text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -601,7 +601,7 @@
 						<div class="price-box">
 							<p class="text-size--19 trailer--large">
 								<span class="color-blue tablet-l-text-regular">XXX</span>
-								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -638,7 +638,7 @@
 						<div class="price-box">
 							<p class="text-size--19 trailer--large">
 								<span class="color-blue tablet-l-text-regular">XXX</span>
-								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -675,7 +675,7 @@
 							<p class="text-size--13 tablet-l-hidden">Only</p>
 							<p class="text-size--44 trailer--large tablet-l-trailer--xlarge tablet-l-text-size--19">
 								<span class="color-blue text-light tablet-l-text-regular">XXX</span>
-								<span class="text-size--19 tablet-l-text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--19 tablet-l-text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -719,7 +719,7 @@
 							<p class="text-size--13 tablet-l-hidden">Only</p>
 							<p class="text-size--44 trailer--large tablet-l-trailer--xlarge tablet-l-text-size--19">
 								<span class="color-blue text-light tablet-l-text-regular">XXX</span>
-								<span class="text-size--19 tablet-l-text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--19 tablet-l-text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -764,7 +764,7 @@
 						<div class="price-box">
 							<p class="text-size--19 trailer--large">
 								<span class="color-blue tablet-l-text-regular">XXX</span>
-								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -801,7 +801,7 @@
 						<div class="price-box">
 							<p class="text-size--19 trailer--large">
 								<span class="color-blue tablet-l-text-regular">XXX</span>
-								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -837,7 +837,7 @@
 							<p class="text-size--13 tablet-l-hidden">Only</p>
 							<p class="text-size--44 trailer--large tablet-l-trailer--xlarge tablet-l-text-size--19">
 								<span class="color-blue text-light tablet-l-text-regular">XXX</span>
-								<span class="text-size--19 tablet-l-text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--19 tablet-l-text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -854,7 +854,7 @@
 			</div>
 			<div class="col-hg-6 col-md-6 flex padding-whole--xsmall mobile-padding-toleft--med mobile-padding-toright--med">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-tablet-medium grid-row--gutter-none">
-					<div class="col-hg-5 col-xs-auto col-hg--middle">
+					<div class="col-hg-5 col-xs-auto col-hg--middle tablet-l-text--center">
 						<div class="terminal-block__image-holder">
 							<img src="tablet-test-img.png" alt="">
 							<div class="splash splash--image">
@@ -862,7 +862,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-7 col-xs bundle-content tablet-l-text--center">
+					<div class="col-hg-7 col-xs bundle-content tablet-l-text--center padding-toleft--small mobile-padding-toleft--none">
 						<div class="terminal-block__description">
 							<div class="colors-holder desktop-hidden">
 								<ul class="colors-list">
@@ -889,7 +889,7 @@
 							<p class="text-size--13 tablet-l-hidden">Only</p>
 							<p class="text-size--44 trailer--large tablet-l-trailer--xlarge tablet-l-text-size--19">
 								<span class="color-blue text-light tablet-l-text-regular">XXX</span>
-								<span class="text-size--19 tablet-l-text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--19 tablet-l-text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -926,7 +926,7 @@
 						<div class="price-box">
 							<p class="text-size--19 trailer--large">
 								<span class="color-blue tablet-l-text-regular">XXX</span>
-								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -963,7 +963,7 @@
 						<div class="price-box">
 							<p class="text-size--19 trailer--large">
 								<span class="color-blue tablet-l-text-regular">XXX</span>
-								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span class="toleft--xsmall">/MD.</span></span>
+								<span class="text-size--11 color-gray"><span class="price-currency">KR.</span><span>/MD.</span></span>
 							</p>
 							<p class="text-size--11 color-steel-grey">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
@@ -1125,7 +1125,7 @@
 	</div>
 	<div class="container">
 		<div class="usp-block usp-block--image grid-row--gutter-none trailer padding-whole--section padding-trailer--large" style="background-image: url(image-usp.png)">
-			<div class="col-md-12 tablet-l-visible">
+			<div class="col-md-12 tablet-p-visible mobile-visible mobile-image">
 				<img src="image-usp-mobile.png" alt="image descr." />
 			</div>
 			<div class="col-lg-5 usp-block__content tablet-p-text--center tablet-p-padding-whole--section tablet-p-padding-leader--large tablet-p-padding-trailer--large mobile-padding-toleft mobile-padding-toright">
@@ -1177,7 +1177,7 @@
 		</div>
 		
 		<div class="usp-block usp-block--image grid-row-lg--right grid-row--gutter-none trailer padding-whole--section padding-trailer--large" style="background-image: url(image-usp-2.png)">
-			<div class="col-md-12 tablet-l-visible">
+			<div class="col-md-12 tablet-p-visible mobile-visible mobile-image">
 				<img src="image-usp-mobile.png" alt="image descr." />
 			</div>
 			<div class="col-lg-5 usp-block__content tablet-p-text--center tablet-p-padding-whole--section tablet-p-padding-leader--large tablet-p-padding-trailer--large mobile-padding-toleft mobile-padding-toright">
